helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: 209.38.190.186.nip.io
      http:
        paths:
          - path: /customers/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: customer-service
                port:
                  number: 3002
          - path: /orders/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 3001
          - path: /products/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-service
                port:
                  number: 3003
          - path: /aggregated-orders/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: aggregator-service
                port:
                  number: 3004
